@@ -10,13 +10,13 @@ import static org.junit.Assert.assertThat;
 public class ConvertMatrix2ListTest {
 
     @Test
-    public void when2on2ArraythenList4() {
+    public void when2on2ArrayThenList4() {
         ConvertMatrix2List list = new ConvertMatrix2List();
         int[][] input = {
                 {1, 2},
                 {3, 4}
         };
-        List<Integer> expect = Arrays.asList(
+        List<Integer> expect = List.of(
                 1, 2, 3, 4
         );
         List<Integer> result = list.toList(input);
